fix soem problems

--- a/SAC.ipynb
+++ b/SAC.ipynb
@@ -102,26 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\envs\\registration.py:601: UserWarning: \u001b[33mWARN: Using the latest versioned environment `Ant-v4` instead of the unversioned environment `Ant`.\u001b[0m\n",
-      "  logger.warn(\n",
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\core.py:329: DeprecationWarning: \u001b[33mWARN: Initializing wrapper in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
-      "  deprecation(\n",
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\wrappers\\step_api_compatibility.py:39: DeprecationWarning: \u001b[33mWARN: Initializing environment in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
-      "  deprecation(\n",
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\wrappers\\record_video.py:78: UserWarning: \u001b[33mWARN: Overwriting existing videos at d:\\113403\\project\\DQL\\SAC_Ant\\20220902 folder (try specifying a different `video_folder` for the `RecordVideo` wrapper if this is not desired)\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "game_name = 'Ant'\n",
+    "game_name = 'Ant-v4'\n",
     "ROOT_PATH = os.getcwd()\n",
     "d = date.today().strftime('%Y%m%d')\n",
     "path = os.path.join(ROOT_PATH, f'SAC_{game_name}', d)\n",
@@ -171,21 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\wrappers\\monitoring\\video_recorder.py:78: DeprecationWarning: \u001b[33mWARN: Recording ability for environment Ant-v4 initialized with `render_mode=None` is marked as deprecated and will be removed in the future.\u001b[0m\n",
-      "  logger.deprecation(\n",
-      "d:\\113403\\project\\DQL\\venv\\lib\\site-packages\\gym\\core.py:51: DeprecationWarning: \u001b[33mWARN: The argument mode in render method is deprecated; use render_mode during environment initialization instead.\n",
-      "See here for more information: https://www.gymlibrary.ml/content/api/\u001b[0m\n",
-      "  deprecation(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logger.info('start to train')\n",
     "replay_buffer.clear_memory()\n",
